recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:1: error: Missing closing brace `}' assumed here
override def run() {
^FourSquare:1: error: expected start of definition
override def run() {
         ^FourSquare:9: error: expected class or object definition
def carre(){
^